[Test][Build] Move reflection out of Main binary
- Move out the testing code to the Tester binary.
- Modify the build to compile and jar non-main binaries.
- Call the Tester jar (hardcoded :/) to perform testing on a project's Main class.